# QuadricSolver

./: CMakeLists.txt  Doxyfile  README.md  quadricSolver.c  quadricSolver.cpp  quadricSolver.h  test-qs.cpp  test.c
docs/html/: annotated.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_common_test-members.html  class_common_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_disabled_test.html  class_expect_failure_test-members.html  class_expect_failure_test.html  class_failed_test.html  class_failing_param_test.html  class_fatal_failure_in_fixture_constructor_test-members.html  class_fatal_failure_in_fixture_constructor_test.html  class_fatal_failure_in_set_up_test-members.html  class_fatal_failure_in_set_up_test.html  class_field_helper-members.html  class_field_helper.html  class_foo_environment-members.html  class_foo_environment.html  class_foo_test-members.html  class_foo_test.html  class_g_mock_output_test-members.html  class_g_mock_output_test.html  class_integer_function_test-members.html  class_integer_function_test.html  class_interface-members.html  class_interface.html  class_invoke_helper-members.html  class_invoke_helper.html  class_mock-members.html  class_mock.html  class_mock_foo-members.html  class_mock_foo.html  (+1476 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  (+24 more)
docs/latex/: annotated.tex  class_bar_environment.tex  class_base.tex  class_biggest_int_convertible.tex  class_common_test.tex  class_conversion_helper_base.tex  class_conversion_helper_derived.tex  class_counter.tex  class_disabled_test.tex  class_expect_failure_test.tex  class_failed_test.tex  class_failing_param_test.tex  class_fatal_failure_in_fixture_constructor_test.tex  class_fatal_failure_in_set_up_test.tex  class_field_helper.tex  class_foo_environment.tex  class_foo_test.tex  class_g_mock_output_test.tex  class_integer_function_test.tex  class_interface.tex  class_invoke_helper.tex  class_mock.tex  class_mock_foo.tex  class_my_array.tex  class_my_string.tex  class_my_type.tex  class_non_container.tex  class_non_fatal_failure_in_fixture_constructor_test.tex  class_non_fatal_failure_in_set_up_test.tex  class_on_the_fly_prime_table.tex  class_pre_calculated_prime_table.tex  class_predicate1_test.tex  class_predicate2_test.tex  class_predicate3_test.tex  class_predicate4_test.tex  class_predicate5_test.tex  class_prime_table.tex  class_prime_table_test.tex  class_private_code.tex  class_property_one.tex  (+799 more)
