cmake_minimum_required(VERSION 3.14)
project(QuadricSolver)

set(CMAKE_C_COMPILER "/usr/bin/gcc" CACHE string "gcc compiler" FORCE) 


set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lncurses" CACHE STRING "Comment" FORCE)
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -D NDEBUG" CACHE STRING "Comment" FORCE)
set(CMAKE_C_FLAGS_SANITIZER "${CMAKE_C_FLAGS} -Wpedantic -Wall -Wextra -Wformat=2 -fsanitize=address,undefined -g" CACHE STRING "Comment" FORCE)
set(CMAKE_C_FLAGS_COVERAGE "${CMAKE_C_FLAGS} -D NDEBUG -fprofile-instr-generate -fcoverage-mapping" CACHE STRING "Comment" FORCE)

include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        release-1.8.0
)

FetchContent_GetProperties(googletest)
if(NOT googletest_POPULATED)
  FetchContent_Populate(googletest)
  add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
endif()


set_target_properties(gtest PROPERTIES FOLDER extern)
set_target_properties(gtest_main PROPERTIES FOLDER extern)
set_target_properties(gmock PROPERTIES FOLDER extern)
set_target_properties(gmock_main PROPERTIES FOLDER extern)

enable_testing()

add_executable(quadricSolver ./quadricSolver.c ./quadricSolver.h)
add_executable(test-qs ./quadricSolver.h ./test.c)

target_link_libraries(
    test-qs
    gtest_main
)

include(GoogleTest)
gtest_discover_tests(test-qs)

message("                                                                                                                                                 ")
message("                                                                                                                                                 ")
message("                                                                                                                                                 ")
message("                                                                                                                                                 ")
message("                                                                                                                                                 ")
message("                                                                                                                                                 ")
message("                                                                              &*                                                                 ")
message("                                                                              @&&  %*%@@.&@%                                                     ")
message("                                                                       .#,#&&&(@@& @&*@@(/@%(                                                    ")
message("                                                                      */,(&%&,%&&@/@@. (%@@@*  *                                                 ")
message("                                                                     &%%# *%&.*...../*    ,(,.(                                                  ")
message("                                                                    (#/(.,.   ./,.,.....,.... /                                                  ")
message("                                                                      %.((*./    *,...,#(..//.*                                                  ")
message("                                                                       (#  ,*###*, / *(,#/,,***,,((*                                             ")
message("                                                                        ,/&#(,,*%(%#&/*/***,,..,,////##%&%&(,.                                   ")
message("                                                                         ((#*,(*&*,,,,,,,,,,*(#%,,***/#(%%%&%%##%&&%(                            ")
message("                                                                          .%(//,,.,,,,...,**%%%&%@****/###%%%%#%###%&&&                          ")
message("                                                                        ,. ,,.,,,,,,,,.(,..,,(#/,*.***/(#%%%%#%%####%&,                          ")
message("                                                                      /.,.,,.......,,,*%*,,,.,,..,,,***/(##%%%%@&&##&#.                          ")
message("                                                                     *.../,,..,...,*,/**,,,,,,.,*,,,,**//###%%#%###%@*                           ")
message("                                                                   ,(...(**,,,.......///(*//**,,,.,,,,*///(######%%@&                            ")
message("                                                                   ,,..,/*.., ,,..,,,.**////(,,*,.,.,,**(((##(##%%@&                             ")
message("                                                                   %...,*,....,,..../,.,,,*,*.,.,....,,*//%##%%&&#&                              ")
message("                                                                 .*,.,.,,.....,,*,,...,,*,***.,,.,,.,,,,,*//(((((&                               ")
message("                                                                */.,,,....,...,......,,.,,,,,,,,..,,,,,,*/,(* *..                                ")
message("                                                          (/(*..*...,.....*..*,****....,,.,,,,,((,/#*%&(                                         ")
message("                                                          ..#.,,.. . . ...,,.*,****,****////////////%*#                                          ")
message("                                                        /.*#,,.............,,..  .,.,,,*****///////#%..                                          ")
message("                                                      ,.,**,../.,.. ....,....... ....*.*.,***///*///(*%                                          ")
message("                                                  ,*..../,*,.(..........,,,,... ....**,/*.,,*,,/*///((#                                          ")
message("                                            /,.........,,,,*,/,.,.......,.**,,,,....,,*,.*,,,***/**//,/                                          ")
message("                                     .*.......  ... .*,,,./,**..*....... ..,,.,**,,... .,.*,********/.,*                                         ")
message("                                   .  /....,..,. ...,.,,,,,..,,,,. .  ......** /*,,  .. ....,****,/**/,                                          ")
message("                                 ..*,....,.,,,.........,,,.,,,.,/....    .    *./*,,  *. .....,,,*//.,.                                          ")
message("                             . %,........,,,,.,..... ...     . ..    .            . . .......,,..,,**,#*                                         ")
message("                            ,,,,,..,,....,,......... ....     .... .,  .....   ... ...,(*,,,.,,*,*(#(*#*                                         ")
message("                          *,*...*,.*./,.............. ...  ... . ,. ........      .....**/*.*..,,,*&*#*,                                         ")
message("                        .*.....,,..*,,.,,,,,....... .,,**....... ,..,.,,.. .. .. ,.....*.#/**.,,,%,#/*(.                                         ")
message("                       .,,..,...*/***..,,....... ..,.,**,...... .,..,,... ..   .,,. *.../(/#,,,,,%,****                                          ")
message("                      .,,,. . ,*.,**...,..,.........,,.*** ..  ,*..*,...... . ..... .*,.*,/*#,,,,#**/%*                                          ")
message("                      ,/.....  ......,,..,.............../. .......*,......  . ....**..*,/*(,,,/*/(//,                                           ")
message("                     .,.., ..  ..,,,.,,..,,.........,........ ....,*....... .. ....**.,*/(/**,*(///(,                                            ")
message("                    .,...................,....,.......,.....  ....,...*.... .  .  ..../**/*,,*(*#//*                                             ")
message("                   ...,,.,.......................,,,,,.... ... ..,..,,,..,*,...   ..,***/*****/////,                                             ")
message("                  .,*,..,..,.............,..(.....,..*,,*.... ....,,,.*,,,,,.......,,,,/*,**#*////#                                              ")
message("                  .....,,,,.,.................../...,,,,***......,**,**#/**,,.......,%..#///(//***/,                                             ")
message("                  %.,.,,,(*.*.......... .   ..,.*,,.,,,.*,,......,,,,/(/#/***,.......,,,*/#(/*,,,*,%                                             ")
message("                  *,,...,./,*....................(,,,.,..*..,,,,,,***//(%/******.....,,,,*#(/***,,*/                                             ")
message("                  .***,,..,*,,...,...... .  .. (/*/*,*,,.......,,.****//((#***,,........,,,((/*****(                                             ")
message("                  .**,,,,...,.,,.,,.......... ...../,%*,,,,,,,..****,***//////*,,,........./*//*,*/                                              ")
message("                   ***,,,*..,...*.,... .....    ..***,*,**,*,,,*,,,**,,**/#(%*,,,,.... ....,,#*,*./                                              ")
message("                  .,(**,*,,,.....,....  ..   .......**,,,,,*,,**,,,,**,*/%&,,*,,,,..........,***/(,                                              ")
message("                    //*,***,*,*..,,....  .....   ,,,.*,,,,,,,,*,,,,,,*/*/(,,@.*(,,,.,. ... . ////#                                               ")
message("                     *.,********,,................,,,,,*/,,,,,,,,,,**//*//#,#   ...,,,.,...,./*(%                                                ")
message("         .  .    .    ..*,///******,*,,,.,,.....,*,,,,,,*,,,,,,*,/*(///((//#/  .. ..,,,,,*/,**//(..........                                      ")
message("        .......... .  . .. ,,#//**,*,.,,,,,,,,,,..,,*,,**,,,,*///(((((&&&#&%((&(,*,,*,,.//,./**%.,,,,,,.......................                   ")
message("       ,.,.,..        . ....,/*/(,,,**/***/(///*/((//((#(#(,*///(((#(((##&%%&@%/%*,.,(%/****/****(%(,,,,...........,..,.......   ...             ")
message("              ..  .   ......,*/*/(/(/////(((((///&(%#/##(&/(%(%**,//(%%#/. .,*.........#(/#/////(//(#&%,,,.,,.,....,,,,,...,,,,...,              ")
message("                .         .. ....***((##((#(//((((%##&####%#&%#,. ..  . ............   *#///////#(/(&((((#/.,,,...,,,,....,...,.... .            ")
message("               ... .   .  .... . ....,,,,,*(/(%((%%%&%#*.%,.                            &/*&(((((#(((/(((%(&,........ .       . .                ")
message("                            .      ...........,.......                                ..*(#%&(((((((@%/(@&@&* ..                                 ")
message("                                    .     ...........                                .....,,..,*,,#&@@&*.,,* ...      .                          ")
message("                                            ........                                     .    ..... ....,......                                  ")
message("                                                       .                                                                                         ")
message("                                                                                                                                                 ")

